# iblfile

./: .gitignore  README.md  autoencrypted.go  autopemencrypted.go  autosymencrypted.go  consts.go  deducetype.go  file_format.go  format.go  go.mod  go.sum  go.work.sum  meta_format.go  version.go
allvers/v1/: autoencrypted.go  consts.go  deducetype.go  format.go  version.go
autoencryptedencoders/aes256/: aes256.go
autoencryptedencoders/noencryption/: noencryption.go
autoencryptedencoders/pem/: pem.go
encryptors/aes256/: aes256.go
encryptors/noencryption/: noencryption.go
encryptors/pem/: pem.go
go/: autoencrypted.go  deducetype.go  file_format.go  go.mod  go.work  go.work.sum  meta_format.go
go/encryptors/aes256/: aes256.go
go/testcli/: go.sum  main.go
rust/: Cargo.toml  test
rust/src/: autoencrypted.rs  file_format.rs  lib.rs  main.rs  meta_format.rs  version.rs
rust/src/encryptors/: aes256.rs  mod.rs  noencryption.rs
testcli/: .gitignore  go.mod  main.go  test  testcli  testfile  testfilev2
